[project]
name = "code-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "requests>=2.32.3",
    "umap-learn>=0.5.7",
    "transformers>=4.51.3",
    "polars>=1.29.0",
    "numpy>=2.2.5",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "marker-pdf[full]>=1.6.2",
    "networkx>=3.4.2",
    "pygraphviz>=1.14",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
